# chess-capital

./: LICENSE  README.md  README_RU.md
cv-service/: README.md  README_RU.md  config.py  main.py  pyproject.toml  recognizer.py  utils.py
cv-service/examples/: cv_request_example.http
cv-service/routers/: __init__.py  frame.py
cv-service/routers/v1/: __init__.py  frame.py
frontend/: admin.html  index.html
frontend/style/: styles.css
game-service/: .env  .gitignore  README.md  config.py  main.py  pyproject.toml
game-service/enums/: statuses.py
game-service/exceptions/: __init__.py  base.py  game_not_found.py  handlers.py  invalid_board_matrix.py  too_many_moves.py
game-service/models/: game.py  requests.py  responses.py
game-service/routers/: __init__.py
game-service/routers/v1/: __init__.py  game_process.py  send_move.py
game-service/tests/: EgameNotFoundTest.py  EhandlersTest.py  EinitTest.py  MgameTest.py  Mrequests.py  MresponsesTest.py  RgameProcessTest.py  RinitTest.py  RmainInitTest.py  RsendMoveTest.py  UchessFacadeTest.py  UstartupTest.py  configTest.py  mainTest.py
game-service/utils/: __init__.py  chess_facade.py  lichess_stream.py  startup.py
