[project]
name = "game-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.12.1",
    "chess>=1.11.2",
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "D102",   # undocumented-public-method
    "D103",   # undocumented-public-function
    "D100",   # undocumented-public-module
    "D104",   # undocumented-public-package
    "D106",   # undocumented-public-nested-class
    "D107",   # undocumented-public-init
    "D203",   # one-blank-line-before-class
    "D212",   # multi-line-summary-first-line
    "COM812", # missing-trailing-comma
    "RUF001", # ambiguous-unicode-character-string
    "PTH123", # builtin-open
    "A005",   # stdlib-module-shadowing
]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-line-length = "dynamic"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
